# python.web-hw10

./: pyproject.toml
django_app/content/: forms.py  migrate_mongo_to_postrgres.py  models.py  pymongo_db.py  urls.py  views.py
django_app/content/migrations/: 0001_initial.py
django_app/content/static/content/: style.css
django_app/content/templates/content/: add_quote.html  add_tags.html  base.html  top_tags.html
django_app/django_app/: settings.py  urls.py
django_app/users/: forms.py  views.py
django_app/users/templates/users/: login.html  signup.html
